# base32check-python

./: .gitignore  README.md  activation_code.py  base32check1.py  setup.cfg
.github/workflows/: test.yml
