[metadata]
name = base32check1
description = Implementation of the base32check1 algorithm.
version = 0.3.0.dev
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitmarck-service/base32check-python
author = BITMARCK Service GmbH
author_email = info@bitmarck.de
license = Apache v2
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = base32, RFC 4648
project_urls =
    Homepage=https://base32check.org/
    Source=https://github.com/bitmarck-service/base32check-python

[options]
py_modules =
    activation_code
    base32check1
python_requires = >=3.6
zip_safe = yes

[bdist_wheel]
universal = 0
